--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.2.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2"
   }
 }
